--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
+  
+  "homepage": "/https://github.com/Cedrickeys/Cedricportfolio/",
   "name": "vite-react-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "/https://github.com/Cedrickeys/Cedricportfolio/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.0",
